--- a/index.html
+++ b/index.html
@@ -3,17 +3,116 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Great Idea - Responsive I</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Great Idea!</title>
 
     <link
-      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      href="https://fonts.googleapis.com/css?family=Bangers|Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/site.css" />
     <link rel="stylesheet" href="css/index.css" />
+
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
   </head>
 
   <body>
-    <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+    <header id="top">
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <a href="index.html">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+      </a>
+    </header>
+    <main>
+      <section id="hero">
+        <div>
+          <h1>
+            Innovation <br />On<br />
+            Demand
+          </h1>
+          <button>Get Started</button>
+        </div>
+        <div>
+          <img src="img/hero-img.png" alt="Image of a code snippet." />
+        </div>
+      </section>
+      <hr />
+      <section class="above-fold">
+        <article>
+          <h2>Features</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </article>
+        <article>
+          <h2>About</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </article>
+      </section>
+      <img
+        class="middle-img"
+        src="img/mid-page-accent.jpg"
+        alt="Image of code snippets across the screen"
+      />
+      <section class="below-fold">
+        <article>
+          <h2>Services</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </article>
+        <article>
+          <h2>Product</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </article>
+        <article>
+          <h2>Vision</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </article>
+      </section>
+
+      <hr />
+      <footer>
+        <h2>Contact</h2>
+        <address>
+          <p>123 Way 456 Street</p>
+          <p>Somewhere, USA</p>
+        </address>
+        <p class="phone-number">(888) 888-8888</p>
+        <p>sales@greatidea.io</p>
+        <small>Copyright Great Idea! 2020</small>
+      </footer>
+    </main>
   </body>
 </html>
