--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
 
   <body>
     <header id="top">
-      <nav>
+      <nav id="top-nav">
         <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
@@ -29,10 +29,27 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
-
+      <button id="menu-button">Menu</button>
       <a href="index.html">
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
       </a>
+      <script>
+        window.__isMenuOpen = false;
+        document.getElementById("menu-button").onclick = handleMenu;
+        function handleMenu(e) {
+          if (__isMenuOpen) return;
+          e.stopPropagation();
+          document.getElementById("top-nav").classList.add("display-block");
+          window.__isMenuOpen = true;
+          document.onclick = function() {
+            document
+              .getElementById("top-nav")
+              .classList.remove("display-block");
+            window.__isMenuOpen = false;
+            document.onclick = null;
+          };
+        }
+      </script>
     </header>
     <main>
       <summary>
