--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
 
   <body>
     <header id="top">
-      <nav id="top-nav">
+      <nav>
         <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
@@ -29,23 +29,33 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
-      <button id="menu-button">Menu</button>
+      <button id="menu-button">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+          <path
+            d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
+          />
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+          <path
+            d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
+          />
+        </svg>
+      </button>
       <a href="index.html">
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
       </a>
       <script>
-        window.__isMenuOpen = false;
+        var topHeader = document.getElementById("top");
+        var __isMenuOpen = false;
         document.getElementById("menu-button").onclick = handleMenu;
         function handleMenu(e) {
           if (__isMenuOpen) return;
           e.stopPropagation();
-          document.getElementById("top-nav").classList.add("display-block");
-          window.__isMenuOpen = true;
+          topHeader.classList.add("menu-open");
+          __isMenuOpen = true;
           document.onclick = function() {
-            document
-              .getElementById("top-nav")
-              .classList.remove("display-block");
-            window.__isMenuOpen = false;
+            topHeader.classList.remove("menu-open");
+            __isMenuOpen = false;
             document.onclick = null;
           };
         }
